# pyglog

./: .gitignore  LICENCE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
logger/: __init__.py  logger_factory.py
logger/providers/: __init__.py  base_logger_factory.py  elasticsearch_logger_factory.py  opensearch_logger_factory.py  standard_logger.py
src/logger/: __init__.py  logger_factory.py
src/logger/providers/: base_logger_factory.py  elasticsearch_logger_factory.py  opensearch_logger_factory.py  standard_logger.py
src/pyglog/: __init__.py  config.py  logger_factory.py
src/pyglog/providers/: __init__.py  base_logger_factory.py  elasticsearch_logger_factory.py  opensearch_logger_factory.py  standard_logger.py
